# sypy

./: .gitignore  example.py  license.txt  pyproject.toml  readme.md
sypy/: __init__.py  _logging.py  _packet.py  _utils.py  parameters.py
sypy/_dispatcher/: __init__.py  callback.py
sypy/http/: __init__.py  _errors.py  _frames.py  _method.py  _status.py
sypy/http/_frames/: __init__.py  parts.py
sypy/http/path/: __init__.py  characters.py  encoder.py
